--- a/examples/package.json
+++ b/examples/package.json
@@ -5,11 +5,11 @@
   "description": "Example scripts for Stagehand",
   "main": "./",
   "scripts": {
-    "build": "pnpm --filter @browserbasehq/stagehand run build",
+    "build": "pnpm --filter @testsigmainc/stagehand run build",
     "start": "pnpm run build && sh -c 'if [ -n \"$1\" ]; then tsx \"$1.ts\"; else tsx example.ts; fi' --"
   },
   "dependencies": {
-    "@browserbasehq/stagehand": "workspace:*"
+    "@testsigmainc/stagehand": "workspace:*"
   },
   "devDependencies": {
     "tsx": "^4.10.5"
